Fix: remove scrollbar on page when not needed

--- a/src/styles/templates/page.narrow.scss
+++ b/src/styles/templates/page.narrow.scss
@@ -31,7 +31,7 @@
     font-size: 15px;
     margin: auto;
     padding: 0.75rem;
-    overflow-x: scroll;
+    overflow-x: auto;
 
     @media screen and (min-width: $tablet) {
       padding: 0;
